Fixed menu clipping

--- a/_assets/css/main.css
+++ b/_assets/css/main.css
@@ -48,7 +48,6 @@ header ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  overflow: hidden;
 }
 
 header ul li {
